--- a/c/screen.css
+++ b/c/screen.css
@@ -243,14 +243,76 @@ footer p {
  **************************************/
 
 #picture-view { 
-                margin: 0 auto;
                 margin-left:5%;
-                margin-right:5%;
-                margin-bottom: 0.5em;
                 background-color: #F1EDC2;
-                padding:1%;
-                padding-bottom: 1.5em;
+                width: 40%;
+                max-width:36em;
+                float:left;
+
+}
+
+#pane { 
+        max-width: 36em;
+        text-align:center;
+        padding-left:0.5em;
+        padding-right:0.5em;
+}
+#pane img { 
+            max-width: 100%;
+            vertical-align: middle;
+
  }
+
+#pane p { 
+          margin-top:0.5em;
+ }
+#pane ul { 
+           display:block;
+           text-align:left;
+ }
+#pane ul li { 
+              display:inline;
+              margin:0;
+              
+ } 
+#pane ul li button{
+
+                    margin-left: 1em;
+               display:inline-block;
+               padding-left: 1em;
+               padding-right: 1em;
+               padding-top:0.5em;
+               padding-bottom: 0.5em;
+               background-color:#bbb;
+               border: 1px solid black;
+ }
+
+
+#pane ul li button:active{
+                           background-color:#444;
+                    }
+
+#intro-text { 
+              margin-right:5%;
+              margin-left:5%;
+              width: 45%;
+              float:right;
+}
+
+#sitemap { 
+           margin-right:5%;
+           margin-left:5%;
+           float:right;
+           width: 45%;
+           margin-top: 1em;
+ }
+
+#sitemap div.category { 
+                        display:block;
+                        float:left;
+                        margin: 1em;
+                        min-height:7em;
+                       }
 
 /**********************************************************
  * Styles for: Hours/Directions/Contact Us -> contact.php *
@@ -484,7 +546,7 @@ section#wordsworthhearing blockquote{
 
 ul#timelinelinks { 
                    display:block;
-                   padding:1em;
+                   padding-top:1em;
  }
  ul#timelinelinks li {
                        display:inline-block;
@@ -501,7 +563,13 @@ ul#timelinelinks {
             padding-right:1%;
             width:60%;}
 
-#timeline h3 a { text-decoration:none;}
+#timeline h3 { text-decoration:none;
+					font-size: 1.2em;
+					color:#6E0000;
+					padding-top:.75em;
+					padding-bottom:.5em;}
+					
+#timeline h4 { padding-bottom:.25em;}
 
 #timeline div {
 			padding-top:.75%;
@@ -541,7 +609,7 @@ ul#timelinelinks {
  **********************************************************/
  
 #seniors { 
-       margin-left:4%;
+       margin-left:5%;
        margin-right:2%;
        padding-top:0;
        font-size:1.25em;
@@ -549,19 +617,17 @@ ul#timelinelinks {
        font-family: Helvetica, Arial, sans-serif;
 }
        
+ ul#computercoaching li {
+		margin-left:3%;
+		margin-bottom:0.7em;
+}
 
-#seniors ul { 
-              margin-bottom:1em;
-              margin-left:10%;
-              font-size:1.6em;}
-              
-#seniors ul li { 
-               margin-bottom:0.3em;
-               line-height:1.3em;
-               }
-               
-#seniorlinks ul li {
-				margin-bottom:0.6em;
-               	line-height:1.3em;
-               }
-               
+#seniorlinks h3 {
+		margin-top:2%;
+}
+
+
+ ul#seniorlinks li {
+		margin-bottom:0.3em;
+        line-height:1.3em;
+}
