--- a/c/screen.css
+++ b/c/screen.css
@@ -196,6 +196,7 @@ nav#primary-nav li:hover ul li:last-child {
 section {         
           font-size:1.4em;
           padding-bottom: 1em;
+          padding-top:0.5em;
 }
 
 section h2 { 
@@ -248,9 +249,12 @@ footer p {
                 width: 40%;
                 max-width:36em;
                 float:left;
-
+                margin-bottom:1em;
 }
 
+#picture-view h2 {
+                   text-align:center;
+ }
 #pane { 
         max-width: 36em;
         text-align:center;
@@ -311,8 +315,28 @@ footer p {
                         display:block;
                         float:left;
                         margin: 1em;
-                        min-height:7em;
+                        min-height:8em;
                        }
+
+#sitemap ul li { 
+                 margin-bottom:0.2em;
+ }
+
+#sitemap ul li a { 
+                   text-decoration:none;
+                   color:blue;
+}
+
+@media screen and (max-width:960px) { 
+  #sitemap { 
+             width:90%;
+             float:none;
+             margin-right:5%;
+             margin-left:5%;
+             clear:both;
+}
+
+ }
 
 /**********************************************************
  * Styles for: Hours/Directions/Contact Us -> contact.php *
