Monday, 4/25/2011 - 11:40am Fixed validation error on header link.

--- a/c/screen.css
+++ b/c/screen.css
@@ -69,7 +69,7 @@ header h1#site-title {
                        font-size: 5em;
 }
 
-header hgroup a { 
+header a { 
            text-decoration: none;
            color:white;
            display:block;
