--- a/c/screen.css
+++ b/c/screen.css
@@ -15,6 +15,7 @@ body {
        font-size:62.5%;
        background: white;
        font-family: Helvetica, Arial, sans-serif;
+       min-width: 640px;
 }
 
 #function-links { height:1.5em;
@@ -27,11 +28,12 @@ body {
                   list-style-type:none;
                   display:block;
                   float:right;
+                  padding-top:0.2em;
+                  padding-bottom: 0.2em;
+
 }
 
 #function-links ul li{ display:inline;
-                        padding-top:0.2em;
-                        padding-bottom: 0.2em;
                         margin-right:1em;
 }
 
