Tuesday, 4/26/2011 - 9:27pm Made addresses use the <address> tag.  And the world was safe for democracy once again.

--- a/c/reset.css
+++ b/c/reset.css
@@ -36,6 +36,11 @@ footer,header,hgroup,menu,nav,section {
     display:block;
 }
 
+address { 
+          text-decoration:none;
+          font-style: normal;
+ }
+
 ul {
     list-style:none;
 }
